@@ -18,6 +18,7 @@ namespace Castle.MonoRail.Framework.Services
 	using System.Collections;
 	using System.Collections.Specialized;
 	using Castle.Core;
+	using Castle.MonoRail.Framework.Configuration;
 	using Castle.MonoRail.Framework.Internal;
 	using Framework;
 
@@ -101,6 +102,9 @@ namespace Castle.MonoRail.Framework.Services
 		/// <param name="provider">The provider.</param>
 		public void Service(IServiceProvider provider)
 		{
+			MonoRailConfiguration config = (MonoRailConfiguration)provider.GetService(typeof(MonoRailConfiguration));
+			useExtensions = config.UrlConfig.UseExtensions;
+
 			serverUtil = (IServerUtility) provider.GetService(typeof(IServerUtility));
 			routingEng = (IRoutingEngine) provider.GetService(typeof(IRoutingEngine));
 		}
