@@ -15,6 +15,8 @@
 		<add url="/index.rails" controller="home" action="index" area="optional" />
 	</defaultUrls>
 
+	<url useExtensions="true|false" /> 
+
 	<controllers>
 		<assembly>AssemblyName1</assembly>
 		<assembly>AssemblyName2</assembly>
